--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ idna==3.5
 install==1.3.5
 pipenv==2023.11.15
 platformdirs==4.0.0
+python-decouple==3.8
 pytz==2023.3.post1
 requests==2.31.0
 sqlparse==0.4.4
