--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DJANGO_SECRET_KEY='django-insecure-9wbo2endu@emqdeiyqc$*kf+hw2u%jq)*8w*ik8gobp*%
 DJANGO_DEBUG=True
 
 # Cron schedule
-SCRAPING_CRON_FREQUENCY='*/1 * * * *'
+SCRAPING_CRON_FREQUENCY='*/5 * * * *'
+SWAPI_BASE_URL='https://swapi.dev/api/people'
 
 
